tests/compile_fail/borrow/forward_ref_associated_type.stderr
error: `#[borrow(forward)]` cannot be used on a generic parameter field, an associated type projection involving generic parameters, or a forwarding pointer to one because the impl can overlap with `core`'s blanket `Borrow` implementation
 --> tests/compile_fail/borrow/forward_ref_associated_type.rs:7:26
  |
7 | struct Foo<'a, T: Trait>(&'a T::Assoc);
  |                          ^
